--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "load": "node load-data.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3",
+    "express": "^4.16.2",
     "node-http-error": "^1.1.0",
-    "pouchdb": "6.2.0",
-    "ramda": "^0.24.1"
+    "pouchdb": "^6.2.0",
+    "pouchdb-adapter-http": "^6.4.3",
+    "pouchdb-core": "^6.4.3",
+    "ramda": "^0.24.1",
+    "slugify": "^1.2.9"
   }
 }
